--- a/install/env.yml
+++ b/install/env.yml
@@ -1,9 +1,6 @@
 name: noty
-channels:
-  - defaults
-  - conda-forge
 dependencies:
-  - python
-  - pip
-  - python-dotenv
-  - pyyaml
+  - anaconda::python==3.10.9
+  - anaconda::pip==22.3.1
+  - anaconda::python-dotenv==0.21.0
+  - anaconda::pyyaml==6.0
