--- a/install/alias.yml
+++ b/install/alias.yml
@@ -1,5 +1,5 @@
-noty_launch: --launch
-noty_create: --create
-noty_delete: --delete
-noty_list: --list
-noty_search: --search
+nlaunch: --launch
+ncreate: --create
+ndelete: --delete
+nlist: --list
+nsearch: --search
