--- a/.github/workflows/code-formatting.yml
+++ b/.github/workflows/code-formatting.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           auto-update-conda: true
           python-version: 3.10.9
-          environment-file: environment.yml
+          environment-file: install/environment.yml
           activate-environment: noty
           auto-activate-base: false
 
